--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM anapsix/alpine-java:8_jdk
 VOLUME /tmp
 COPY app.jar /app.jar
-CMD java -jar app.jar
+CMD java -Djava.security.egd=file:/dev/./urandom -jar app.jar
