--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.jpa.properties.hibernate.format_sql=true
 security.user.name=denis
 security.user.password=denis
 
+# server specific cfg
+keycloak.auth-server-url=http://192.168.99.100:18080/auth
+keycloak.realm=sample
+keycloak.public-client=true
+keycloak.resource=sample-app
+# constraints
+keycloak.security-constraints[0].authRoles[0]=user
+keycloak.security-constraints[0].securityCollections[0].patterns[0]=/task/*
